:globe_with_meridians: [#6] Added translations for breadcrumb labels

--- a/i18n/compiled/en.json
+++ b/i18n/compiled/en.json
@@ -1,2 +1,44 @@
 {
+  "2vFy0E": [
+    {
+      "type": 0,
+      "value": "Categories"
+    }
+  ],
+  "DPiQcJ": [
+    {
+      "type": 0,
+      "value": "Form submission statistics"
+    }
+  ],
+  "KJFOCt": [
+    {
+      "type": 0,
+      "value": "Logic"
+    }
+  ],
+  "Qroj81": [
+    {
+      "type": 0,
+      "value": "Forms"
+    }
+  ],
+  "ZiDANM": [
+    {
+      "type": 0,
+      "value": "Home"
+    }
+  ],
+  "aEaZkg": [
+    {
+      "type": 0,
+      "value": "Design"
+    }
+  ],
+  "pSTlTi": [
+    {
+      "type": 0,
+      "value": "Settings"
+    }
+  ]
 }
