--- a/i18n/compiled/nl.json
+++ b/i18n/compiled/nl.json
@@ -1,2 +1,44 @@
 {
+  "2vFy0E": [
+    {
+      "type": 0,
+      "value": "Categorieën"
+    }
+  ],
+  "DPiQcJ": [
+    {
+      "type": 0,
+      "value": "Inzendingstatistieken"
+    }
+  ],
+  "KJFOCt": [
+    {
+      "type": 0,
+      "value": "Logica"
+    }
+  ],
+  "Qroj81": [
+    {
+      "type": 0,
+      "value": "Formulieren"
+    }
+  ],
+  "ZiDANM": [
+    {
+      "type": 0,
+      "value": "Home"
+    }
+  ],
+  "aEaZkg": [
+    {
+      "type": 0,
+      "value": "Ontwerpen"
+    }
+  ],
+  "pSTlTi": [
+    {
+      "type": 0,
+      "value": "Instellingen"
+    }
+  ]
 }
