--- a/i18n/compiled/nl.json
+++ b/i18n/compiled/nl.json
@@ -5,6 +5,12 @@
       "value": "Categorieën"
     }
   ],
+  "BfpzoP": [
+    {
+      "type": 0,
+      "value": "Formulier ingepland"
+    }
+  ],
   "DPiQcJ": [
     {
       "type": 0,
@@ -35,10 +41,28 @@
       "value": "Ontwerpen"
     }
   ],
+  "e/VFua": [
+    {
+      "type": 0,
+      "value": "Formulier actief"
+    }
+  ],
+  "pJ2Kxl": [
+    {
+      "type": 0,
+      "value": "Formulier in onderhoudsmodus"
+    }
+  ],
   "pSTlTi": [
     {
       "type": 0,
       "value": "Instellingen"
+    }
+  ],
+  "t5YtWB": [
+    {
+      "type": 0,
+      "value": "Formulier niet actief"
     }
   ]
 }
