--- a/i18n/messages/en.json
+++ b/i18n/messages/en.json
@@ -4,20 +4,40 @@
     "description": "Route breadcrumb label for form categories",
     "originalDefault": "categories"
   },
+  "4hl9jg": {
+    "defaultMessage": "There was an authentication and/or permission problem.",
+    "description": "'Permission denied' error message",
+    "originalDefault": "There was an authentication and/or permission problem."
+  },
   "BfpzoP": {
     "defaultMessage": "Scheduled form",
     "description": "Label for form status \"scheduled\"",
     "originalDefault": "Scheduled form"
+  },
+  "DK2ewv": {
+    "defaultMessage": "Authentication problem",
+    "description": "'Permission denied' error title",
+    "originalDefault": "Authentication problem"
   },
   "DPiQcJ": {
     "defaultMessage": "Form submission statistics",
     "description": "Route breadcrumb label for form submission statistics",
     "originalDefault": "form submission statistics"
   },
+  "JX8BYx": {
+    "defaultMessage": "Unfortunately something went wrong!",
+    "description": "'Generic' error message",
+    "originalDefault": "Unfortunately something went wrong!"
+  },
   "KJFOCt": {
     "defaultMessage": "Logic",
     "description": "Route breadcrumb label for form detail logic",
     "originalDefault": "logic"
+  },
+  "NJ3Psx": {
+    "defaultMessage": "Your session has expired.",
+    "description": "Session expiry notice - expired",
+    "originalDefault": "Your session has expired."
   },
   "Qroj81": {
     "defaultMessage": "Forms",
@@ -49,9 +69,19 @@
     "description": "Route breadcrumb label for form detail settings",
     "originalDefault": "settings"
   },
+  "rZfe8Z": {
+    "defaultMessage": "Sorry, we couldn't do that because you are logged out - this may be because your session expired.",
+    "description": "Session expiry notice - API call failed with 401",
+    "originalDefault": "Sorry, we couldn't do that because you are logged out - this may be because your session expired."
+  },
   "t5YtWB": {
     "defaultMessage": "Inactive form",
     "description": "Label for form status \"inactive\"",
     "originalDefault": "Inactive form"
+  },
+  "zEFFxg": {
+    "defaultMessage": "Oops!",
+    "description": "'Generic' error title",
+    "originalDefault": "Oops!"
   }
 }
