--- a/i18n/messages/nl.json
+++ b/i18n/messages/nl.json
@@ -1,8 +1,58 @@
 {
+  "23y84q": {
+    "defaultMessage": "Bevestiging",
+    "description": "Main navigation label 'confirmation'",
+    "originalDefault": "Confirmation"
+  },
+  "2TGIP7": {
+    "defaultMessage": "Inloggen",
+    "description": "Main navigation label 'authentication settings'",
+    "originalDefault": "Login"
+  },
+  "2Ud2Cc": {
+    "defaultMessage": "Formulier regels",
+    "description": "Main navigation label 'form rules'",
+    "originalDefault": "Form rules"
+  },
   "2vFy0E": {
     "defaultMessage": "Categorieën",
     "description": "Route breadcrumb label for form categories",
     "originalDefault": "categories"
+  },
+  "3dh+h1": {
+    "defaultMessage": "Vertalingen",
+    "description": "Main navigation label 'translations settings'",
+    "originalDefault": "Translations"
+  },
+  "465GuA": {
+    "defaultMessage": "Instellingen",
+    "description": "Main navigation label 'form settings'",
+    "originalDefault": "Settings"
+  },
+  "4QxfrT": {
+    "defaultMessage": "Introductiepagina",
+    "description": "Main navigation label 'form introduction page'",
+    "originalDefault": "Introduction page"
+  },
+  "8CNXuR": {
+    "defaultMessage": "Inzendingen",
+    "description": "Main navigation label 'submissions settings'",
+    "originalDefault": "Submissions"
+  },
+  "91B589": {
+    "defaultMessage": "Betaling",
+    "description": "Main navigation label 'payment settings'",
+    "originalDefault": "Payment"
+  },
+  "9Hn0fj": {
+    "defaultMessage": "Variabelen",
+    "description": "Main navigation label 'variables settings'",
+    "originalDefault": "Variables"
+  },
+  "9ereUQ": {
+    "defaultMessage": "Formulieren",
+    "description": "Main navigation label 'forms overview'",
+    "originalDefault": "Forms"
   },
   "BfpzoP": {
     "defaultMessage": "Formulier ingepland",
@@ -14,15 +64,66 @@
     "description": "Route breadcrumb label for form submission statistics",
     "originalDefault": "form submission statistics"
   },
+  "F5wcwK": {
+    "defaultMessage": "Bevestiging",
+    "description": "Main navigation label 'confirmation settings'",
+    "originalDefault": "Confirmation"
+  },
+  "FDqOKN": {
+    "defaultMessage": "Prefill",
+    "description": "Main navigation label 'prefill settings'",
+    "isTranslated": true,
+    "originalDefault": "Prefill"
+  },
+  "FVCVno": {
+    "defaultMessage": "Registratie",
+    "description": "Main navigation label 'registration settings'",
+    "originalDefault": "Registration"
+  },
+  "IHI3xy": {
+    "defaultMessage": "Informatie",
+    "description": "Main navigation label 'general settings'",
+    "originalDefault": "Information"
+  },
   "KJFOCt": {
     "defaultMessage": "Logica",
     "description": "Route breadcrumb label for form detail logic",
     "originalDefault": "logic"
   },
+  "KvV9iL": {
+    "defaultMessage": "Formulier stappen",
+    "description": "Main navigation label 'form steps page'",
+    "originalDefault": "Form steps"
+  },
+  "PN3JMo": {
+    "defaultMessage": "Beschikbaarheid",
+    "description": "Main navigation label 'availability settings'",
+    "originalDefault": "Availability"
+  },
+  "PWu0qX": {
+    "defaultMessage": "Formulieren",
+    "description": "Main navigation label 'form subject'",
+    "originalDefault": "Forms"
+  },
   "Qroj81": {
     "defaultMessage": "Formulieren",
     "description": "Route breadcrumb label for forms overview",
     "originalDefault": "forms"
+  },
+  "UIKEnY": {
+    "defaultMessage": "Gebruikersvariabelen",
+    "description": "Main navigation label 'user variables'",
+    "originalDefault": "User variables"
+  },
+  "YbQaJ0": {
+    "defaultMessage": "Bibliotheek regels",
+    "description": "Main navigation label 'library rules'",
+    "originalDefault": "Library rules"
+  },
+  "ZMsrHL": {
+    "defaultMessage": "Categorieën",
+    "description": "Main navigation label 'form categories'",
+    "originalDefault": "Categories"
   },
   "ZiDANM": {
     "defaultMessage": "Home",
@@ -34,10 +135,45 @@
     "description": "Route breadcrumb label for form detail design",
     "originalDefault": "design"
   },
+  "csfzAx": {
+    "defaultMessage": "Geschiedenis",
+    "description": "Main navigation label 'history settings'",
+    "originalDefault": "History"
+  },
+  "dTtQ0W": {
+    "defaultMessage": "Formulieren",
+    "description": "Main navigation label 'back to forms'",
+    "originalDefault": "Forms"
+  },
   "e/VFua": {
     "defaultMessage": "Formulier actief",
     "description": "Label for form status \"active\"",
     "originalDefault": "Active form"
+  },
+  "eJZabQ": {
+    "defaultMessage": "Nieuwe stap toevoegen",
+    "description": "Main navigation label 'add form step'",
+    "originalDefault": "Add new step"
+  },
+  "f5KoHj": {
+    "defaultMessage": "Weergave",
+    "description": "Main navigation label 'presentation settings'",
+    "originalDefault": "Presentation"
+  },
+  "fGylQR": {
+    "defaultMessage": "Ontwerpen",
+    "description": "Main navigation label 'form design'",
+    "originalDefault": "Design"
+  },
+  "fdVayh": {
+    "defaultMessage": "Startpagina",
+    "description": "Main navigation label 'form start page'",
+    "originalDefault": "Start page"
+  },
+  "jThIo3": {
+    "defaultMessage": "Inzendingstatistieken",
+    "description": "Main navigation label 'form statistics'",
+    "originalDefault": "Form statistics"
   },
   "pJ2Kxl": {
     "defaultMessage": "Formulier in onderhoudsmodus",
@@ -49,9 +185,24 @@
     "description": "Route breadcrumb label for form detail settings",
     "originalDefault": "settings"
   },
+  "qF9GQ2": {
+    "defaultMessage": "Logica",
+    "description": "Main navigation label 'form logic'",
+    "originalDefault": "Logic"
+  },
+  "t2hC8j": {
+    "defaultMessage": "Nieuwe logica regel toevoegen",
+    "description": "Main navigation label 'add logic rule'",
+    "originalDefault": "Add new logic rule"
+  },
   "t5YtWB": {
     "defaultMessage": "Formulier niet actief",
     "description": "Label for form status \"inactive\"",
     "originalDefault": "Inactive form"
+  },
+  "xGHW+D": {
+    "defaultMessage": "Bewaartermijn",
+    "description": "Main navigation label 'data removal settings'",
+    "originalDefault": "Data removal"
   }
 }
