--- a/i18n/compiled/nl.json
+++ b/i18n/compiled/nl.json
@@ -5,6 +5,44 @@
       "value": "Categorieën"
     }
   ],
+  "9eNQrq": [
+    {
+      "options": {
+        "other": {
+          "value": [
+            {
+              "type": 1,
+              "value": "label"
+            }
+          ]
+        },
+        "true": {
+          "value": [
+            {
+              "type": 1,
+              "value": "label"
+            },
+            {
+              "type": 0,
+              "value": " "
+            },
+            {
+              "children": [
+                {
+                  "type": 0,
+                  "value": "Verplicht"
+                }
+              ],
+              "type": 8,
+              "value": "span"
+            }
+          ]
+        }
+      },
+      "type": 5,
+      "value": "isRequired"
+    }
+  ],
   "BfpzoP": [
     {
       "type": 0,
